# credit-card-rag

./: .env.example  .gitignore  API_GUIDE.md  EMBEDDING_GUIDE.md  INDEXING_GUIDE.md  RAG_PIPELINE.md  README.md  RETRIEVER_GUIDE.md  api.py  chunking_strategy.md  hello.py  pyproject.toml  requirements.txt  test_api.py
data/: cashback.md  others.md  reward.md  travel.md
embeddings/: credit_cards_embeddings.json
rag/: embedding.py  indexing.py  loader_and_chunking.py  rag_chain.py  retriever.py
